--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="w-100">
             <ul>
-              <li ng-repeat="one in all">{{one}}</li>
+              <oi ng-repeat="one in all">{{one}}</oi>
             </ul>
         </div>
     </div>
