--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h2>Full list</h2>
         </div>
         <div class="w-100">
-            <ul>
-              <oi ng-repeat="one in all">{{one}}</oi>
-            </ul>
+            <ol>
+              <li ng-repeat="one in all">{{one}}</li>
+            </ol>
         </div>
     </div>
     
