--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 var app = angular.module('myApp', []);
 app.controller('myCtrl', function($scope) {
     $scope.all=  ['George','Guillaume -路过蜻蜓','卯日星君yao','冯冠群','浩宇','Ray','zhao qian','超','卞洋','🅰 WANG','Lawrence','谢家的大少爷','麒云John','Xavier','Eric張廣宇 @ MG BNE ²⁰¹⁸','Kevin Hwa','Patrick 超','JACOB.HAO','SECON','Pak Hin','david@澳洲黄金海岸地产','Ewan','Max','Jupiter GU','Anthony','Meng','Jun','董世莹 Sam',
-        '董世莹 Sam','JM','卢景昇(新秀丽)','Aaron 双龙一凤 继续戏猪'];
+       'JM','卢景昇(新秀丽)','Aaron 双龙一凤 继续戏猪'];
     
 
     $scope.change = function() {
